--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,11 +1,13 @@
+@import url(calc_simples.css);
+
 .barra_superior {
-    background-color: blueviolet;
-
+    background-color: rgb(204, 180, 226);
 }
 
-.conteudo{
-    background-color: blue;
+.conteudo {
+    background-color: rgb(214, 172, 141);
 }
-.rodape{
-    background-color: aqua;
+
+.rodape {
+    background-color: rgb(236, 204, 122);
 }
